- Fixed bug #45556 (Return value from callback isn't freed)